# WorldSync

./: Cargo.toml  README.md
.github/workflows/: build_multiplatform.yml  test_linux.yml  test_multiplatform.yml
client/: .gitignore  Cargo.toml  Cross.toml
client/examples/: test.rs
client/src/: error.rs  events.rs  java_setup.rs  lib.rs  main.rs  world_dl.rs  world_download.rs  world_upload.rs
client/src/gui/: login.rs  mod.rs  parts.rs  style.rs  tasks.rs
client/src/gui/host/: mod.rs  tasks.rs
client/src/gui/hosting/: mod.rs  tasks.rs
client/src/gui/join/: mod.rs
client/src/gui/login/: mod.rs  tasks.rs
client/src/mc/: mod.rs  server.rs
client/tests/: account.rs  authentication.rs  mc_server.rs  util.rs  various.rs
localjava/: Cargo.toml
localjava/examples/: ensure_java.rs
localjava/src/: download.rs  lib.rs
localjava/src/download/: linux.rs  stream.rs  unpack.rs  util.rs  windows.rs
protocol/: Cargo.toml  build.rs
protocol/src/: connect.rs  lib.rs
server/: .gitignore  Cargo.toml
server/src/: host.rs  lib.rs  main.rs  util.rs
server/src/admin_ui/: client.rs  mod.rs  tui.rs
server/src/db/: mod.rs  user.rs  world.rs
server/src/rpc/: calls.rs  mod.rs
server/src/world/: mod.rs
server/tests/: account.rs  authentication.rs  import_export.rs  util.rs  various.rs
shared/: Cargo.toml
shared/src/: lib.rs
sync/: .gitignore  Cargo.toml
sync/src/: lib.rs
sync/tests/: dir_status.rs  test_save.rs
wrapper/: Cargo.toml
wrapper/examples/: server.rs
wrapper/src/: config.rs  default.properties  grammer.pest  lib.rs  parser.rs  util.rs
wrapper/tests/: parser.rs  server.rs
