[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread"] }
tokio-rustls = "0.23.1"
tokio-util = { version = "0.6", features = ["codec"] }
rustls-native-certs = "0.6"

protocol = { path = "../protocol" }
futures = { version = "0.3" }
thiserror = "1"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["registry"] }
derivative = "2"
iced = { version = "0.3" , features = ["tokio"] }
iced_futures = "0.3"
iced_native = "0.4"
shared = { path = "../shared" }
wrapper = { path = "../wrapper" }
sync = { path = "../sync" }

[dev-dependencies]
server = { path = "../server" }

[features]
deployed = [] # encrypt connection with Tls and do not auto fill test credentials
