[package]
name = "localjava"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.1.0"
flate2 = "1.0.22"
futures-util = "0.3.19"
reqwest = {version = "0.11", features = ["stream"]}
tar = "0.4.38"
thiserror = "1.0.30"
tokio = {version ="1.15.0", features = ["sync", "macros"]}
tracing = "0.1.29"
zip = "0.5.13"
zip-extensions = "0.6.1"
