[package]
name = "localjava"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.1.0"
tar = "0.4.38"
flate2 = {version ="1"}
zip = {version = "0.5", default-features = false, features = ["deflate"]}
futures = "0.3.19"
futures-util = "0.3.19"
reqwest = {version = "0.11", features = ["stream"]}
thiserror = "1.0.30"
tokio = {version ="1.15.0", features = ["sync", "macros", "rt-multi-thread"]}
tracing = "0.1.29"
regex = "1.5.4"
semver = "1.0.4"
