[package]
name = "protocol"
version = "0.1.0"
edition = "2021"

[dependencies]
tarpc = { git = "https://github.com/google/tarpc", features = ["full"] }
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"] }
uuid = { version = "0.8", features = ["serde", "v4"] }
time = { version = "0.3", features = ["serde"] }
thiserror = "1.0"

sync = { path = "../sync" }
