[package]
name = "protocol"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread"] }
tokio-rustls = "0.23.1"
tokio-util = { version = "0.6", features = ["codec"] }
rustls-native-certs = "0.6"

serde = { version = "1", features = ["derive"] }
uuid = { version = "0.8", features = ["serde", "v4"] }
time = { version = "0.3", features = ["serde"] }
thiserror = "1.0"

bincode = "1.0"
shared = { path = "../shared" }
sync = { path = "../sync" }
wrapper = { path = "../wrapper" }
