[package]
name = "protocol"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[features]
deployed = []

[dependencies]
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread"] }
tokio-rustls = "0.23.1"
rustls-native-certs = "0.6"
tracing = "0.1"

serde = { version = "1", features = ["derive"] }
uuid = { version = "1.1", features = ["serde", "v4"] }
time = { version = "0.3", features = ["serde"] }
thiserror = "1.0"

bincode = "1.0"
shared = { path = "../shared" }
sync = { path = "../sync" }
wrapper = { path = "../wrapper" }

[build-dependencies]
vergen = { version = "7", default-features = false, features = ["build", "git", "cargo"] }
