[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["macros", "net", "sync", "rt-multi-thread"] }
futures = { version = "0.3" }
async-minecraft-ping = { version = "0.4" }

rust-argon2 = "0.8"
rand = "0.8"
uuid = { version = "0.8", features = ["serde", "v4"] }
typed-sled = "0.1.14"
serde = { version = "1", features = ["derive"] }
bincode = "1"
structopt = "0.3"

dialoguer = "0.9.0"
thiserror = "1.0"

tracing = "0.1"
tracing-subscriber = "0.3"
async-trait = "0.1"

protocol = { path = "../protocol" }
shared = { path = "../shared" }
sync = { path = "../sync" }
wrapper = { path = "../wrapper" }

[features]
testing = []
deployed = []
