[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "^1.15", features = ["macros", "net", "sync", "rt-multi-thread"] }
tokio-util = { version = "0.6", features = ["codec"] }
ppp = "2"
futures = { version = "0.3" }
async-trait = "0.1"
async-minecraft-ping = { version = "0.4" }

rand = "0.8"
rust-argon2 = "0.8"
uuid = { version = "0.8", features = ["serde", "v4"] }
typed-sled = "0.1.14"
serde = { version = "1", features = ["derive"] }
bincode = "1"

structopt = "0.3"
dialoguer = "0.9.0"
thiserror = "1.0"

tracing = "0.1"
tracing-subscriber = "0.3"

protocol = { path = "../protocol" }
shared = { path = "../shared" }
sync = { path = "../sync" }
wrapper = { path = "../wrapper" }

[features]
testing = []
deployed = ["protocol/deployed"] # encrypt connection with Tls and do not auto fill test credentials
