[package]
name = "sync"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
seahash = "4"
walkdir = "2"
thiserror = "1"
tokio = { version = "1", features = ["fs", "io-util", "rt", "macros"] }
futures = "0.3"
serde = { versin = "1", features = ["derive"] }
