[package]
name = "wrapper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "1", features = ["process", "io-util", "macros", "rt", "fs", "time"]}
# tokio-stream = {version ="0.1", features = ["io-util"]}
thiserror = "1"
pest = "2"
pest_derive = "2"
