[package]
name = "wrapper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["util"]
util = ["reqwest", "tar", "flate2", "zip"]

[dependencies]
reqwest = { version = "0.11", optional = true , features= ["rustls-tls"], default-features=false }
tar = {version = "0.4.38", optional = true}
flate2 = {version ="1", optional = true}
zip = {version = "0.6", default-features = false, features = ["deflate"], optional = true}

tokio = {version = "1", features = ["process", "io-util", "macros", "rt-multi-thread", "fs", "time"]}
tracing = "0.1"
thiserror = "1"
derivative = "2"
peg = "0.8"
time = { version = "0.3", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
shared = { path = "../shared" }

[dev-dependencies]
rand = "0.8"
